Sorted out the woolsoft global settings

--- a/template.xcconfig
+++ b/template.xcconfig
@@ -28,7 +28,7 @@ VALIDATE_PRODUCT
 
 // == Code Signing ===
 
-CODE_SIGN_IDENTITY = -
+CODE_SIGN_IDENTITY
 CODE_SIGN_ENTITLEMENTS
 CODE_SIGN_IDENTITY
 CODE_SIGN_RESOURCE_RULES_PATH
