--- a/template.xcconfig
+++ b/template.xcconfig
@@ -35,7 +35,7 @@ CODE_SIGN_RESOURCE_RULES_PATH
 OTHER_CODE_SIGN_FLAGS
 PROVISIONING_PROFILE
 
-// == Deployment ===
+// === Deployment ===
 
 STRIPFLAGS
 ALTERNATE_GROUP
