--- a/global-osx.xcconfig
+++ b/global-osx.xcconfig
@@ -137,7 +137,7 @@ CLANG_WARN_OBJC_MISSING_PROPERTY_SYNTHESIS = NO   	// This is to support legacy 
 GCC_WARN_ALLOW_INCOMPLETE_PROTOCOL = YES
 GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = YES
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
-GCC_WARN_STRICT_SELECTOR_MATCH = YES
+GCC_WARN_STRICT_SELECTOR_MATCH = NO					// Not useful and too tough to use with AppKit.
 GCC_WARN_UNDECLARED_SELECTOR = YES
 CLANG_WARN_OBJC_ROOT_CLASS = YES_ERROR
 
