--- a/template.xcconfig
+++ b/template.xcconfig
@@ -1,10 +1,19 @@
 // === Architectures ===
 
+ADDITIONAL_SDKS
 ARCHS
 SDKROOT
 ONLY_ACTIVE_ARCH
 SUPPORTED_PLATFORMS
 VALID_ARCHS
+
+// === Assets ===
+
+ASSET_PACK_MANIFEST_URL_PREFIX
+EMBED_ASSET_PACKS_IN_PRODUCT_BUNDLE
+ENABLE_ON_DEMAND_RESOURCES
+ON_DEMAND_RESOURCES_INITIAL_INSTALL_TAGS
+ON_DEMAND_RESOURCES_PREFETCH_ORDER
 
 // === Build Locations ===
 
@@ -20,6 +29,7 @@ BUILD_VARIANTS
 GCC_VERSION
 DEBUG_INFORMATION_FORMAT
 EMBEDDED_CONTENT_CONTAINS_SWIFT
+ENABLE_TESTABILITY
 GENERATE_PROFILING_CODE
 PRECOMPS_INCLUDE_HEADERS_FROM_BUILT_PRODUCTS_DIR
 APPLICATION_EXTENSION_API_ONLY
@@ -52,11 +62,20 @@ DSTROOT
 INSTALL_PATH
 MACOSX_DEPLOYMENT_TARGET
 PRODUCT_DEFINITION_PLIST
+RESOURCES_TARGETED_DEVICE_FAMILY
 SKIP_INSTALL
 COPY_PHASE_STRIP
 STRIP_INSTALLED_PRODUCT
 STRIP_STYLE
 SEPARATE_STRIP
+IPHONEOS_DEPLOYMENT_TARGET
+TVOS_DEPLOYMENT_TARGET
+WATCHOS_DEPLOYMENT_TARGET
+
+// === Headers ===
+
+COPY_HEADERS_RUN_UNIFDEF
+COPY_HEADERS_UNIFDEF_FLAGS
 
 // === Kernel Modules ===
 
@@ -83,16 +102,22 @@ MACH_O_TYPE
 ORDER_FILE
 OTHER_LIBTOOLFLAGS
 OTHER_LDFLAGS
+OTHER_TAPI_FLAGS
 LD_MAP_FILE_PATH
-LD_DEPENDENCY_INFO_FILE
 GENERATE_MASTER_OBJECT_FILE
 PRELINK_LIBS
 KEEP_PRIVATE_EXTERNS
 LD_QUOTE_LINKER_ARGUMENTS_FOR_COMPILER_DRIVER
+REEXPORTED_FRAMEWORK_NAMES
+REEXPORTED_LIBRARY_NAMES
+REEXPORTED_LIBRARY_PATHS
 LD_RUNPATH_SEARCH_PATHS
 SEPARATE_SYMBOL_EDIT
 PRELINK_FLAGS
+SUPPORTS_TEXT_BASED_API
 SECTORDER_FLAGS
+TEXT_BASED_API_FILE
+TAPI_VERIFY_MODE
 UNEXPORTED_SYMBOLS_FILE
 WARNING_LDFLAGS
 LD_GENERATE_MAP_FILE
@@ -117,6 +142,7 @@ INFOPLIST_PREPROCESS
 COPYING_PRESERVES_HFS_DATA
 PRIVATE_HEADERS_FOLDER_PATH
 MODULEMAP_PRIVATE_FILE
+PRODUCT_BUNDLE_IDENTIFIER
 PRODUCT_MODULE_NAME
 PRODUCT_NAME
 PLIST_FILE_OUTPUT_FORMAT
@@ -133,6 +159,7 @@ LIBRARY_SEARCH_PATHS
 REZ_SEARCH_PATHS
 EXCLUDED_RECURSIVE_SEARCH_PATH_SUBDIRECTORIES
 INCLUDED_RECURSIVE_SEARCH_PATH_SUBDIRECTORIES
+USE_HEADERMAP
 USER_HEADER_SEARCH_PATHS
 
 // === Testing ===
@@ -150,10 +177,15 @@ VERSION_INFO_SUFFIX
 VERSIONING_SYSTEM
 VERSION_INFO_BUILDER
 
-// === Apple LLVM - Code Generation ===
+// === Apple LLVM 7.1 - Address Sanitizer ===
+
+CLANG_ADDRESS_SANITIZER_CONTAINER_OVERFLOW
+
+// === Apple LLVM 7.1 - Code Generation ===
 
 CLANG_DEBUG_INFORMATION_LEVEL
 CLANG_X86_VECTOR_INSTRUCTIONS
+CLANG_ENABLE_CODE_COVERAGE
 GCC_STRICT_ALIASING
 GCC_GENERATE_DEBUGGING_SYMBOLS
 GCC_DYNAMIC_NO_PIC
@@ -172,13 +204,13 @@ GCC_SYMBOLS_PRIVATE_EXTERN
 GCC_UNROLL_LOOPS
 CLANG_USE_OPTIMIZATION_PROFILE
 
-// === Apple LLVM - Custom Compiler Flags ===
+// === Apple LLVM 7.1 - Custom Compiler Flags ===
 
 OTHER_CFLAGS
 OTHER_CPLUSPLUSFLAGS
 WARNING_CFLAGS
 
-// === Apple LLVM - Language ===
+// === Apple LLVM 7.1 - Language ===
 
 GCC_CHAR_IS_UNSIGNED_CHAR
 GCC_ENABLE_ASM_KEYWORD
@@ -196,39 +228,41 @@ GCC_ENABLE_PASCAL_STRINGS
 GCC_SHORT_ENUMS
 GCC_USE_STANDARD_INCLUDE_SEARCHING
 
-// === Apple LLVM - Language - C++ ===
+// === Apple LLVM 7.1 - Language - C++ ===
 
 CLANG_CXX_LANGUAGE_STANDARD
 CLANG_CXX_LIBRARY
 GCC_ENABLE_CPP_EXCEPTIONS
 GCC_ENABLE_CPP_RTTI
 
-// === Apple LLVM - Language - Modules ===
+// === Apple LLVM 7.1 - Language - Modules ===
 
 CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES
+CLANG_ENABLE_MODULE_DEBUGGING
 CLANG_ENABLE_MODULES
 CLANG_MODULES_AUTOLINK
 
-// === Apple LLVM - Language - Objective C ===
+// === Apple LLVM 7.1 - Language - Objective C ===
 
 GCC_ENABLE_OBJC_EXCEPTIONS
 CLANG_LINK_OBJC_RUNTIME
 CLANG_ENABLE_OBJC_ARC
+CLANG_ENABLE_OBJC_WEAK
 
-// === Apple LLVM - Preprocessor ===
+// === Apple LLVM 7.1 - Preprocessor ===
 
 ENABLE_NS_ASSERTIONS
 ENABLE_STRICT_OBJC_MSGSEND
 GCC_PREPROCESSOR_DEFINITIONS
 GCC_PREPROCESSOR_DEFINITIONS_NOT_USED_IN_PRECOMPS
 
-// === Apple LLVM - Warning Policies ===
+// === Apple LLVM 7.1 - Warning Policies ===
 
 GCC_WARN_INHIBIT_ALL_WARNINGS
 GCC_WARN_PEDANTIC
 GCC_TREAT_WARNINGS_AS_ERRORS
 
-// === Apple LLVM - Warnings - All Languages ===
+// === Apple LLVM 7.1 - Warnings - All Languages ===
 
 GCC_WARN_CHECK_SWITCH_STATEMENTS
 GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS
@@ -242,6 +276,7 @@ GCC_WARN_64_TO_32_BIT_CONVERSION
 CLANG_WARN_ENUM_CONVERSION
 CLANG_WARN_INT_CONVERSION
 CLANG_WARN_IMPLICIT_SIGN_CONVERSION
+CLANG_WARN_NULLABLE_TO_NONNULL_CONVERSION
 GCC_WARN_INITIALIZER_NOT_FULLY_BRACKETED
 GCC_WARN_ABOUT_RETURN_TYPE_ERROR
 GCC_WARN_MISSING_PARENTHESES
@@ -264,7 +299,7 @@ GCC_WARN_UNUSED_PARAMETER
 GCC_WARN_UNUSED_VALUE
 GCC_WARN_UNUSED_VARIABLE
 
-// === Apple LLVM - Warnings - C++ ===
+// === Apple LLVM 7.1 - Warnings - C++ ===
 
 CLANG_WARN__EXIT_TIME_DESTRUCTORS
 GCC_WARN_NON_VIRTUAL_DESTRUCTOR
@@ -272,25 +307,23 @@ GCC_WARN_HIDDEN_VIRTUAL_FUNCTIONS
 GCC_WARN_ABOUT_INVALID_OFFSETOF_MACRO
 CLANG_WARN_CXX0X_EXTENSIONS
 
-// === Apple LLVM - Warnings - Objective C ===
+// === Apple LLVM 7.1 - Warnings - Objective C ===
 
 CLANG_WARN_DIRECT_OBJC_ISA_USAGE
 CLANG_WARN__DUPLICATE_METHOD_MATCH
 CLANG_WARN_OBJC_IMPLICIT_ATOMIC_PROPERTIES
 CLANG_WARN_OBJC_MISSING_PROPERTY_SYNTHESIS
 GCC_WARN_ALLOW_INCOMPLETE_PROTOCOL
-GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS
 GCC_WARN_STRICT_SELECTOR_MATCH
 GCC_WARN_UNDECLARED_SELECTOR
 CLANG_WARN_OBJC_ROOT_CLASS
 
-// === Apple LLVM - Warnings - Objective C and ARC ===
+// === Apple LLVM 7.1 - Warnings - Objective C and ARC ===
 
 CLANG_WARN_OBJC_EXPLICIT_OWNERSHIP_TYPE
 CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF
 CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK
-CLANG_WARN_OBJC_RECEIVER_WEAK
 CLANG_WARN__ARC_BRIDGE_CAST_NONARC
 
 // === Asset Catalog Compiler - Options ===
@@ -298,6 +331,9 @@ CLANG_WARN__ARC_BRIDGE_CAST_NONARC
 ASSETCATALOG_COMPILER_APPICON_NAME
 ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME
 ASSETCATALOG_OTHER_FLAGS
+ENABLE_ONLY_ACTIVE_RESOURCES
+ENABLE_INCREMENTAL_DISTILL
+ASSETCATALOG_COMPILER_OPTIMIZATION
 ASSETCATALOG_NOTICES
 ASSETCATALOG_WARNINGS
 
@@ -325,6 +361,9 @@ CLANG_STATIC_ANALYZER_MODE
 
 CLANG_ANALYZER_DEADCODE_DEADSTORES
 CLANG_ANALYZER_MEMORY_MANAGEMENT
+CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED
+CLANG_ANALYZER_LOCALIZABILITY_EMPTY_CONTEXT
+CLANG_ANALYZER_NONNULL
 CLANG_ANALYZER_GCD
 
 // === Static Analyzer - Issues - Objective C ===
@@ -333,6 +372,7 @@ CLANG_ANALYZER_OBJC_ATSYNC
 CLANG_ANALYZER_OBJC_NSCFERROR
 CLANG_ANALYZER_OBJC_INCOMP_METHOD_TYPES
 CLANG_ANALYZER_OBJC_COLLECTIONS
+CLANG_ANALYZER_OBJC_GENERICS
 CLANG_ANALYZER_OBJC_UNUSED_IVARS
 CLANG_ANALYZER_OBJC_SELF_INIT
 CLANG_ANALYZER_OBJC_RETAIN_COUNT
@@ -347,5 +387,21 @@ CLANG_ANALYZER_SECURITY_INSECUREAPI_MKSTEMP
 CLANG_ANALYZER_SECURITY_INSECUREAPI_RAND
 CLANG_ANALYZER_SECURITY_INSECUREAPI_STRCPY
 CLANG_ANALYZER_SECURITY_INSECUREAPI_VFORK
+
+// === Swift Compiler - Code Generation ===
+
+SWIFT_DISABLE_SAFETY_CHECKS
+SWIFT_INSTALL_OBJC_HEADER
+SWIFT_OBJC_BRIDGING_HEADER
+SWIFT_OBJC_INTERFACE_HEADER_NAME
+SWIFT_OPTIMIZATION_LEVEL
+
+// === Swift Compiler - Custom Flags ===
+
+OTHER_SWIFT_FLAGS
+
+// === Swift Compiler - Search Paths ===
+
+SWIFT_INCLUDE_PATHS
 
 // === User Defined ===
