Added modulo suport.

--- a/project-ios-debug.xcconfig
+++ b/project-ios-debug.xcconfig
@@ -1,4 +1,4 @@
-// Xcode settings for all Woolsoft OSX Debug configurations
+// Xcode settings for all Woolsoft iOS Debug configurations
 
 // Start with global project settings
 
