--- a/project-ios-release.xcconfig
+++ b/project-ios-release.xcconfig
@@ -1,4 +1,4 @@
-// Xcode settings for all Woolsoft OSX Release configurations
+// Xcode settings for all Woolsoft iOS Release configurations
 
 // Start with global project settings
 
